// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignInPage renders 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-grid-row"
  >
    <div
      class="nhsuk-grid-column-two-thirds"
    >
      <h1
        class="nhsuk-heading-xl"
      >
        Sign in
      </h1>
      <div
        class="nhsuk-u-padding-6 notify-content"
      >
        <h2
          class="nhsuk-heading-m"
        >
          Sign in using an NHS account
        </h2>
        <button
          data-testid="mock-cis2-button"
          type="button"
        >
          Mock CIS2 Sign In Button
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SignInPage renders with cognito login form if env var switch is enabled 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-grid-row"
  >
    <div
      class="nhsuk-grid-column-two-thirds"
    >
      <h1
        class="nhsuk-heading-xl"
      >
        Sign in
      </h1>
      <div
        class="nhsuk-u-padding-6 notify-content"
      >
        <h2
          class="nhsuk-heading-m"
        >
          Sign in using an NHS account
        </h2>
        <button
          data-testid="mock-cis2-button"
          type="button"
        >
          Mock CIS2 Sign In Button
        </button>
      </div>
      <hr
        class="nhsuk-section-break nhsuk-section-break--m"
      />
      <div
        class="nhsuk-u-padding-6 notify-content notify-cognito-sign-in-form"
      >
        <h2
          class="nhsuk-heading-m"
        >
          Dev Only - Sign in with Email / Password
        </h2>
        <div>
          <h2>
            Placeholder Sign-in form
          </h2>
          <p>
            Mock Redirect Component
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
